--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                                     </a>
                                 </li>
                             }
-                            else if (Context.User.IsInRole("patient"))
+                            else if (User.IsInRole("patient"))
                             {
                                 <li>
                                     <a asp-action="index" asp-controller="treatment">
@@ -111,12 +111,15 @@
                                 </li>
                             }
                             <hr style="margin:0;" />
-                            <li>
-                                <a asp-action="index" asp-controller="profile">
-                                    <i class="fa fa-user fa-lg">
-                                    </i> Profiel
-                                </a>
-                            </li>
+                            @if (!User.IsInRole("admin"))
+                            {
+                                <li>
+                                    <a asp-action="index" asp-controller="profile">
+                                        <i class="fa fa-user fa-lg">
+                                        </i> Profiel
+                                    </a>
+                                </li>
+                            }
                             <li>
                                 <a asp-action="Logout" asp-controller="Home" method="get">
                                     <i class="fa fa-sign-out fa-lg">
