--- a/Webapp/Webapp/Views/TreatmentType/Index.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Index.cshtml
@@ -11,43 +11,44 @@
     <a asp-action="Create">Nieuwe toevoegen</a>
 </p>
 <div class="hidden" id="treatmentTypeContainer">
-<table class="table table-striped table-hover" id="treatmentTypeTable" style="width:100%;">
-    <thead>
-        <tr>
-            <th>
-                Naam
-            </th>
-            <th>
-                Omschrijving
-            </th>
-            <th>
-                Actief
-            </th>
-            <th>Acties</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.TreatmentTypes)
-        {
+    <table class="table table-striped table-hover" id="treatmentTypeTable" style="width:100%;">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Active)
-                </td>
-                <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
-                </td>
+                <th>
+                    Naam
+                </th>
+                <th>
+                    Omschrijving
+                </th>
+                <th>
+                    Actief
+                </th>
+                <th>Acties</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.TreatmentTypes)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Active)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 @section Scripts {
     <script>
     $("document").ready(function () {
