--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<h2>Doctor</h2>
+<h2>Arts</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
 <div class="container bootstrap snippet col-lg-offset-0" id="container">
@@ -107,7 +107,7 @@
                         {
                             <div class="form-group">
                                 <div class="col-xs-12">
-                                    <label for="Comments"><h4>Commentaar</h4></label>
+                                    <label for="Comments"><h4>Opmerkingen</h4></label>
                                     <input type="text" class="form-control" name="comments" id="comments" placeholder="Commentaar" title="Commentaar." value="@comment.Description">
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
                         {
                             <div class="form-group">
                                 <div class="col-xs-12">
-                                    <label for="Comments"><h4>Nieuw Commentaar</h4></label>
+                                    <label for="Comments"><h4>Nieuwe opmerking</h4></label>
                                     <input type="text" class="form-control" asp-for="TreatmentDetailViewModels[0].Description.Title" placeholder="Nieuw Titel" title="Titel van commentaar.">
                                     <br />
                                     <input type="text" class="form-control" asp-for="TreatmentDetailViewModels[0].Description.Description" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">
