--- a/Webapp/Webapp/Views/Treatment/Edit.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Doctor</h2>
+<h2>Arts</h2>
 
 <link rel="stylesheet" href="~/css/User.css" />
 <div class="container bootstrap snippet col-lg-offset-0" id="container">
