--- a/Webapp/Webapp/Views/Doctor/Create.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Creëer";
 }
 
-<h2>Creëer</h2>
+<h2>Aanmaken</h2>
 
 <hr />
 <div class="row">
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Opslaan" class="btn btn-default" />
             </div>
         </form>
     </div>
