--- a/Webapp/Webapp/Views/Home/Index.cshtml
+++ b/Webapp/Webapp/Views/Home/Index.cshtml
@@ -24,18 +24,18 @@
                     <h2>LOGIN</h2>
                     <div class="form-group">
 
-                        <label for="username" class="col-sm-3 control-label">username </label>
+                        <label for="username" class="col-sm-3 control-label">Email </label>
                         <div class="col-sm-9">
                             <input type="text" id="username" placeholder="username" class="form-control" name="username">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="password" class="col-sm-3 control-label">Password</label>
+                        <label for="password" class="col-sm-3 control-label">Wachtwoord</label>
                         <div class="col-sm-9">
                             <input type="password" id="password" placeholder="Password" class="form-control" name="password" value="Test123!">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block" asp-action="Login">Login</button>
+                    <button type="submit" class="btn btn-primary btn-block" asp-action="Login">Inloggen</button>
                 </form> <!-- /form -->
             </div>
         </div>
