--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                             <li>
                                 <a asp-action="Logout" asp-controller="Home" method="get">
                                     <i class="fa fa-sign-out fa-lg">
-                                    </i>  Logout
+                                    </i>  Uitloggen
                                 </a>
                             </li>
                         </ul>
@@ -134,7 +134,7 @@
                 @RenderBody()
                 <hr />
                 <footer>
-                    <p>&copy; 2019 - Webapp</p>
+                    <p>&copy; 2019 - Elektronisch Patiënten Dossier</p>
                 </footer>
             </div>
         </div>
