--- a/Webapp/Webapp/Views/TreatmentType/Create.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Creëer</h2>
+<h2>Aanmaken</h2>
 
 <hr />
 <div class="row">
@@ -31,7 +31,7 @@
                     new { @class = "form-control" })
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Opslaan" class="btn btn-default" />
             </div>
         </form>
     </div>
