--- a/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Edit.cshtml
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Opslaan" class="btn btn-default" />
             </div>
         </form>
     </div>
