--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -27,8 +27,7 @@
                     <td>@item.Gender</td>
                     <td>@item.Birth.ToShortDateString()</td>
                     <td>
-                        @Html.ActionLink("Details", "PatientDetails", "Profile", new { id = item.UserId }) |
-                        @Html.ActionLink("Aanpassen", "Treatment", "Patient", new { id = item.UserId })
+                        @Html.ActionLink("Details", "PatientDetails", "Profile", new { id = item.UserId })
                     </td>
                 </tr>
             }
