--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -125,7 +125,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivMail" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivMail" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Email
@@ -135,7 +135,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivGender" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivGender" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Geslacht
@@ -145,7 +145,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivBirthDate" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivBirthDate" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Geboortedatum
@@ -155,7 +155,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivPhone" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivPhone" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Telefoonnummer
@@ -165,7 +165,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivAdress" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivAdress" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Adres
@@ -175,7 +175,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivContactPersonPhone" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivContactPersonPhone" readonly>
 
                                         <span class="slider"></span>
                                     </label>
@@ -186,7 +186,7 @@
                             <div class="form-group">
                                 <div class="col-xs-6">
                                     <label class="switch">
-                                        <input type="checkbox" value="@Model.Patient.PrivContactPersonName" disabled>
+                                        <input type="checkbox" value="@Model.Patient.PrivContactPersonName" readonly>
                                         <span class="slider"></span>
                                     </label>
                                     Contact persoon naam
