--- a/Webapp/Webapp/Views/Treatment/Create.cshtml
+++ b/Webapp/Webapp/Views/Treatment/Create.cshtml
@@ -75,9 +75,10 @@
                         <div class="form-group">
                             <div class="col-xs-12">
                                 <label for="Comments"><h4>Nieuw Commentaar</h4></label>
-                                <input type="text" class="form-control" asp-for="Description.Title" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">
+                                <input type="text" class="form-control" asp-for="Description.Title" placeholder="Nieuwe Opmerking" title="Commentaar op behandeling.">
                                 <br />
-                                <input type="text" class="form-control" asp-for="Description.Description" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">
+                                @Html.TextAreaFor(e => e.Description.Description, new { @class = "form-control", @placeholder="Inhoud van opmerking" })
+                                @*<input type="text" class="form-control" asp-for="Description.Description" placeholder="Nieuw Commentaar" title="Commentaar op behandeling.">*@
                             </div>
                         </div>
                     }
