--- a/Webapp/Webapp/Views/Shared/_Layout.cshtml
+++ b/Webapp/Webapp/Views/Shared/_Layout.cshtml
@@ -81,7 +81,12 @@
                                         </a>
                                     </li>
                                 </ul>
-
+                                <li>
+                                    <a asp-controller="TreatmentType" asp-action="Index">
+                                        <i class="fa fa-stethoscope" aria-hidden="true">
+                                        </i> Behandelingstypes
+                                    </a>
+                                </li>
                                 <li>
                                     <a asp-action="index" asp-controller="patient">
                                         <i class="fa fa-bed fa-lg">
@@ -97,7 +102,7 @@
                                 <li>
                                     <a asp-action="index" asp-controller="department">
                                         <i class="fa fa-hospital-o fa-lg">
-                                        </i> Afdeling
+                                        </i> Afdelingen
                                     </a>
                                 </li>
                             }
