--- a/Webapp/Webapp/Views/TreatmentType/Details.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Details.cshtml
@@ -46,6 +46,9 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Aanpassen", "Edit", new { id = Model.Id }) |
+    @if (User.IsInRole("admin"))
+     {
+        @: @Html.ActionLink("Aanpassen", "Edit", new { id = Model.Id }) |
+     }
     <a asp-action="Index">Terug naar lijst</a>
 </div>
