--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -217,7 +217,7 @@ else if (User.IsInRole("doctor"))
     <div class="container bootstrap snippet">
         <form class="form" method="post" id="registrationForm">
             <div class="row">
-                <div class="col-sm-10"><h1>Doctor</h1><hr /></div>
+                <div class="col-sm-10"><h1>Arts</h1><hr /></div>
             </div>
             <div class="row">
                 <div class="col-sm-9">
