--- a/Webapp/Webapp/Views/TreatmentType/Index.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Index.cshtml
@@ -7,9 +7,12 @@
 
 <h2>Type behandelingenlijst</h2>
 
-<p>
-    <a asp-action="Create">Nieuwe toevoegen</a>
-</p>
+@if (User.IsInRole("admin"))
+{
+    <p>
+        <a asp-action="Create">Nieuwe toevoegen</a>
+    </p>
+}
 <div class="hidden" id="treatmentTypeContainer">
     <table class="table table-striped table-hover" id="treatmentTypeTable" style="width:100%;">
         <thead>
@@ -40,9 +43,12 @@
                         @Html.DisplayFor(modelItem => item.Active)
                     </td>
                     <td>
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        @if (User.IsInRole("admin"))
+                         {
+                            @: | @Html.ActionLink("Aanpassen", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Verwijderen", "Delete", new { id = item.Id })
+                         }
                     </td>
                 </tr>
             }
